--- a/app/views/hands/student.html.erb
+++ b/app/views/hands/student.html.erb
@@ -1,27 +1,28 @@
-<p>
-<strong><%= @user.name %></strong><br>
-<small><%= time_ago_in_words(@user.last_seen_at) %> ago</small>
-</p>
+<h4>
+	<%= @user.name %><br>
+	<small>was seen on this site <%= time_ago_in_words(@user.last_seen_at) %> ago</small>
+</h4>
 
-<div class="row">
-	<div class="col-sm-12">
-		<p><textarea class="form-control" rows="8"></textarea></p>
+<p>Please say some nice words to this new student and ask if they have everything they need to get started. Also show them the "ask" functionality on the website.</p>
+
+<%= form_tag(controller: :hands, action: :welcomed, id: @user.id) do %>
+
+<p><textarea class="form-control" rows="8" placeholder="Anything to report about this student?" name="note"></textarea></p>
 		
-		<p>
-		<div class="btn-group btn-group-justified" data-toggle="buttons">
-		  <label class="btn btn-primary">
-		    <input type="radio" name="options" id="option1" autocomplete="off"> 😄
-		  </label>
-		  <label class="btn btn-primary active">
-		    <input type="radio" name="options" id="option2" autocomplete="off" checked> 😏
-		  </label>
-		  <label class="btn btn-primary">
-		    <input type="radio" name="options" id="option3" autocomplete="off"> 😔
-		  </label>
-		</div>
-		</p>
-		
-	    <p><button type="submit" class="btn btn-primary btn-block">I've said "hi" to this student</button></p>
-		
+<p>
+	<div class="btn-group btn-group-justified" data-toggle="buttons">
+		<label class="btn btn-primary">
+			<input type="radio" name="evaluation" value="😄" id="option1" autocomplete="off"> 😄
+		</label>
+		<label class="btn btn-primary active">
+			<input type="radio" name="evaluation" value="😏" id="option2" autocomplete="off" checked> 😏
+		</label>
+		<label class="btn btn-primary">
+			<input type="radio" name="evaluation" value="😔" id="option3" autocomplete="off"> 😔
+		</label>
 	</div>
-</div>
+</p>
+		
+<p><button type="submit" class="btn btn-primary btn-block">I've said "hi" to this student</button></p>
+
+<% end %>
