add search in hands and tweaks

--- a/app/assets/stylesheets/fonts.scss
+++ b/app/assets/stylesheets/fonts.scss
@@ -1,6 +1,6 @@
 #content
 {
-	font-family:Georgia, palatino, serif;
+    sfont-family:Georgia, palatino, serif;
 	line-height:1.6;
 	font-weight:normal;
 	font-size:15px;
