--- a/app/assets/stylesheets/strap.scss
+++ b/app/assets/stylesheets/strap.scss
@@ -21,7 +21,7 @@ body
 
 .navbar .navbar-right
 {
-	margin-right:0 ! important;
+	smargin-right:0 ! important;
 }
 
 .navbar .glyphicon
@@ -64,7 +64,6 @@ body
 
 .container-fluid
 {
-	background-color:white;
 	margin-right: auto;
 	margin-left: auto;
 }
