--- a/app/assets/stylesheets/tweaks.scss
+++ b/app/assets/stylesheets/tweaks.scss
@@ -1,4 +1,17 @@
 @media screen and (-webkit-min-device-pixel-ratio:0) { 
+
+	#content > .list-group {
+		margin-bottom: 0;
+	}
+
+	#content > .list-group .list-group-item {
+		border-radius: 0;
+		border-left: none;
+		border-right: none;
+	}
+}
+
+@media screen and (-webkit-min-device-pixel-ratio:0) { 
   select,
   textarea,
   input {
