--- a/app/views/hands/index.html.erb
+++ b/app/views/hands/index.html.erb
@@ -1,47 +1,33 @@
-<p>
-	<div class="input-group">
-		<input type="text" class="form-control" placeholder="Search" name="srch-term" id="srch-term">
-		<div class="input-group-btn">
-			<button class="btn btn-default" type="submit"><i class="glyphicon glyphicon-search"></i></button>
-		</div>
-	</div>
-</p>
+<div class="list-group">
 
-<div class="row">
-	<div class="col-sm-12">
-		<div class="list-group">
+	<% if @my_hands.any? %>
+	<% @my_hands.each do |hand| %>
+	<%= link_to({controller: 'hands', action: 'show', id: hand.id}, class: 'list-group-item active') do %>
+	<span class="badge"><%= hand.location %></span>
+	<%= hand.user.name %><br><small><%= time_ago_in_words(hand.created_at) %> ago</small>
+	<% end %>
+	<% end %>
+	<% end %>
 
 
-			<% if @my_hands.any? %>
-			<% @my_hands.each do |hand| %>
-			<%= link_to({controller: 'hands', action: 'show', id: hand.id}, class: 'list-group-item list-group-item-info') do %>
-			<span class="badge"><%= hand.location %></span>
-			<%= hand.user.name %><br><small><%= time_ago_in_words(hand.created_at) %> ago</small>
-			<% end %>
-			<% end %>
-			<% end %>
+	<% @hands.each do |hand| %>
+	<%= link_to({controller: 'hands', action: 'show', id: hand.id}, class: 'list-group-item') do %>
+	<span class="badge"><%= hand.location %></span>
+	<%= hand.user.name %><br><small><%= time_ago_in_words(hand.created_at) %> ago</small>
+	<% end %>
+	<% end %>
 
 
-			<% @hands.each do |hand| %>
-			<%= link_to({controller: 'hands', action: 'show', id: hand.id}, class: 'list-group-item') do %>
-			<span class="badge"><%= hand.location %></span>
-			<%= hand.user.name %><br><small><%= time_ago_in_words(hand.created_at) %> ago</small>
-			<% end %>
-			<% end %>
+	<% if @long_time_users.any? %>
 
+	<% @long_time_users.each do |user| %>
+	<%= link_to({controller: 'hands', action: 'student', id: user.id}, class: 'list-group-item') do %>
+	<%= user.name %><br><small>
+		<% if user.last_spoken_at.blank? %>A new student: give them a warm welcome!<% else %><%= time_ago_in_words(user.last_spoken_at) unless user.last_spoken_at.blank? %> ago<% end %></small>
+	</a>
+	<% end %>
+	<% end %>
 
-			<% if @long_time_users.any? %>
+	<% end %>
 
-			<% @long_time_users.each do |user| %>
-			<%= link_to({controller: 'hands', action: 'student', id: user.id}, class: 'list-group-item') do %>
-			<%= user.name %><br><small>
-				<% if user.last_spoken_at.blank? %>A new student: give them a warm welcome!<% else %><%= time_ago_in_words(user.last_spoken_at) unless user.last_spoken_at.blank? %> ago<% end %></small>
-			</a>
-			<% end %>
-			<% end %>
-
-			<% end %>
-
-		</div>
-	</div>
 </div>
