assist availability registration

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -11,7 +11,7 @@
  *= require_self
  */
 
-$link-color: #CCA300;
+$link-color: #52B15A;
 
 $navbar-default-bg: #469D4F;
 $navbar-default-color: #F0F7FB;
@@ -19,7 +19,7 @@ $navbar-default-link-color: #3a2e28;
 $navbar-default-link-active-color: #F0F7FB;
 $navbar-default-border: transparent;
 
-$component-active-bg: #7F6600;
+$component-active-bg: #52B15A;
 
 $font-size-base: 14px;
 
