--- a/app/views/page/mobile_home.html.erb
+++ b/app/views/page/mobile_home.html.erb
@@ -1,5 +1,6 @@
 <% if current_user.is_admin? %>
 <div class="list-group">
+	<a href="/hands/available" class="list-group-item">Set availability</a>
 	<a href="/hands" class="list-group-item">Hulplijst</a>
 	<a href="/course/grades" class="list-group-item">Cijfers</a>
 </div>
