--- a/app/assets/stylesheets/strap.scss
+++ b/app/assets/stylesheets/strap.scss
@@ -114,7 +114,7 @@ body
 	width:4em;
 }
 
-#grade_comments
+#ssgrade_comments
 {
 	height:325px;
 }
@@ -334,7 +334,7 @@ section.markdown textarea
 	width:100%;
 }
 
-form .btn
+ssform .btn
 {
 	margin-top:1em;
 }
@@ -457,7 +457,7 @@ footer img
 
 form .btn
 {
-	margin-top:0;
+	margins-top:0;
 }
 
 body > .alert
