--- a/app/assets/stylesheets/tweaks.scss
+++ b/app/assets/stylesheets/tweaks.scss
@@ -1,3 +1,16 @@
+.btn.btn-grayed
+{
+    color: #545454;
+    background-color: #ececec;
+    border-color: #ccc;
+}
+
+.btn-grayed:active
+{
+  -webkit-box-shadow: inset 0 3px 5px rgba(0, 0, 0, .125);
+          box-shadow: inset 0 3px 5px rgba(0, 0, 0, .125);
+}
+
 @media screen and (-webkit-min-device-pixel-ratio:0) { 
 
 	#content > .list-group {
