--- a/app/views/layouts/_menu.html.erb
+++ b/app/views/layouts/_menu.html.erb
@@ -1,36 +1,39 @@
-<% if current_user.valid_profile? %>
+<% if current_user.is_admin? %>
+<li><%= link_to '<i class="glyphicon glyphicon-download-alt"></i> Update courseware...'.html_safe, course_import_path, method: :post %></li>
+<li><%= link_to '<i class="glyphicon glyphicon-check"></i> Show pages'.html_safe, admin_pages_path %></li>
+<li class="divider"></li>
+<li><%= link_to '<i class="glyphicon glyphicon-th"></i> Manage students'.html_safe, course_grades_path %></li>
+<li><%= link_to '<i class="glyphicon glyphicon-tasks"></i> Grading list'.html_safe, grading_path %></li>
+<li class="divider"></li>
+<li><%= link_to '<i class="glyphicon glyphicon-wrench"></i> Configuration'.html_safe, config_path %></li>
+<li class="divider"></li>
+<% if Settings['links'] %>
+<% Settings['links'].each do |title, url| %>
+<li><%= link_to title.html_safe, url %></li>
+<% end %>
+<li class="divider"></li>
+<% end %>
+<li><%= link_to '<i class="glyphicon glyphicon-log-out"></i> Logout'.html_safe, profile_logout_path %></li>
 
-	<% if current_user && current_user.group.present? %>
-	<li class="dropdown-header">
-		<%= current_user.group.name %>
-	</li>
-	<li class="divider"></li>
-	<% end %>
-	<% if current_user.is_admin? %>
-	<li><%= link_to '<i class="glyphicon glyphicon-download-alt"></i> Update courseware...'.html_safe, course_import_path, method: :post %></li>
-	<li><%= link_to '<i class="glyphicon glyphicon-wrench"></i> Configuration'.html_safe, config_path %></li>
-	<li class="divider"></li>
-	<li><%= link_to '<i class="glyphicon glyphicon-th"></i> Manage students'.html_safe, course_grades_path %></li>
-	<li><%= link_to '<i class="glyphicon glyphicon-stats"></i> Administration'.html_safe, admin_path %></li>
-	<li class="divider"></li>
-	<% end %>
-	<% if current_user.is_assistant? or current_user.is_admin? %>
-	<li><%= link_to '<i class="glyphicon glyphicon-tasks"></i> Grading list'.html_safe, grading_path %></li>
-	<% end %>
-	<li><%= link_to '<i class="glyphicon glyphicon-list"></i> View grades'.html_safe, profile_grades_path %></li>
-	<li class="divider"></li>
-    <% if Settings['links'] %>
-    <% Settings['links'].each do |title, url| %>
-    <li><%= link_to title.html_safe, url %></li>
-    <% end %>
-	<li class="divider"></li>
-    <% end %>
-	<li><%= link_to '<i class="glyphicon glyphicon-log-out"></i> Logout'.html_safe, profile_logout_path %></li>
+<% elsif current_user.is_assistant? %>
+<li><%= link_to '<i class="glyphicon glyphicon-tasks"></i> Grading list'.html_safe, grading_path %></li>
+<% if Settings['links'] %>
+<li class="divider"></li>
+<% Settings['links'].each do |title, url| %>
+<li><%= link_to title.html_safe, url %></li>
+<% end %>
+<li class="divider"></li>
+<% end %>
+<li><%= link_to '<i class="glyphicon glyphicon-log-out"></i> Logout'.html_safe, profile_logout_path %></li>
 
 <% else %>
-
-	<li>
-		<%= render 'profile/edit' %>
-	</li>
-
+<li><%= link_to '<i class="glyphicon glyphicon-list"></i> View grades'.html_safe, profile_grades_path %></li>
+<% if Settings['links'] %>
+<li class="divider"></li>
+<% Settings['links'].each do |title, url| %>
+<li><%= link_to title.html_safe, url %></li>
 <% end %>
+<li class="divider"></li>
+<% end %>
+<li><%= link_to '<i class="glyphicon glyphicon-log-out"></i> Logout'.html_safe, profile_logout_path %></li>
+<% end%>
