--- a/app/views/layouts/_ama.html.erb
+++ b/app/views/layouts/_ama.html.erb
@@ -1,4 +1,6 @@
+<% if Settings.hands_allow %>
 <li role="presentation" class="dropdown-header" style="padding:5px 10px 0 12px;"><%= @assist_available %> staff are currently available.</li>
+<% end %>
 <li class="dropdown-header"  style="padding:2px 10px 0 10px;">
 	<%= form_tag(profile_ask_path, method: :post) do %>
 		<textarea name="question" class="form-control" rows="3" required placeholder="What do you need help with?" style="margin-top:0.5em"></textarea>
