move student grade table to users controller

--- a/app/assets/stylesheets/tweaks.scss
+++ b/app/assets/stylesheets/tweaks.scss
@@ -82,7 +82,7 @@ textarea#notes
 	border:none;
 	border-radius:0;
 	opacity:0.98;
-	min-width:300px;
+	smin-width:300px;
 	padding-top:0.25em;
 	max-height:400px;
 	overflow-y:scroll;
