submits controller for grading

--- a/app/assets/stylesheets/tweaks.scss
+++ b/app/assets/stylesheets/tweaks.scss
@@ -82,10 +82,14 @@ textarea#notes
 	border:none;
 	border-radius:0;
 	opacity:0.98;
-	smin-width:300px;
 	padding-top:0.25em;
 	max-height:400px;
 	overflow-y:scroll;
+}
+
+.navbar .dropdown-menu
+{
+	min-width:300px;
 }
 
 .videoblock
