--- a/app/views/students/_table.html.erb
+++ b/app/views/students/_table.html.erb
@@ -69,6 +69,8 @@
 							<% else %>
 							<li><%= link_to 'Mark as active', user_path(id: user.id, user: { active: true }), method: :put %></li>
 							<% end %>
+							<li role="separator" class="divider"></li>
+							<li><%= link_to 'Calculate final grade', user_calculate_final_grade_path(user_id: user.id), method: :post %>
 						</ul>
 					</div>
 				</div>
@@ -80,19 +82,18 @@
 
 	</table>
 
-
-<p>
-	<% if current_user.is_admin? %>
-	<%= link_to '<i class="glyphicon glyphicon-ok"></i> Publish what\'s done'.html_safe, course_mark_all_public_path(pset: params[:pset], group: params[:group]), method: 'post', class: 'btn btn-default', data: { confirm:'Are you sure?' } %>
-	<% end %>
-	<%= link_to '<i class="glyphicon glyphicon-user"></i> Import Users'.html_safe, admin_import_path, class:'btn btn-default' %>
-	<%= link_to '<i class="glyphicon glyphicon-th"></i> Export Grades for Excel'.html_safe, admin_export_grades_path, class:'btn btn-default' %>
-	<%= link_to '<i class="glyphicon glyphicon-print"></i> Dump Grades for archiving'.html_safe, admin_dump_grades_path, class:'btn btn-default' %>
-	<%= link_to '<i class="glyphicon glyphicon-briefcase"></i> Statistics'.html_safe, admin_stats_path, class:'btn btn-default' %>
-	<% if GradeTools.available? %>
-	<%= link_to '<i class="glyphicon glyphicon-modal-window"></i> Calculate final grades'.html_safe, course_assign_final_grade_path, method: :put, class: 'btn btn-default', data: { confirm:'Are you sure?' } %>
-	<% end %>
-</p>
+	<p>
+		<% if current_user.is_admin? %>
+		<%= link_to '<i class="glyphicon glyphicon-ok"></i> Publish what\'s done'.html_safe, course_mark_all_public_path(pset: params[:pset], group: params[:group]), method: 'post', class: 'btn btn-default', data: { confirm:'Are you sure?' } %>
+		<% end %>
+		<%= link_to '<i class="glyphicon glyphicon-user"></i> Import Users'.html_safe, admin_import_path, class:'btn btn-default' %>
+		<%= link_to '<i class="glyphicon glyphicon-th"></i> Export Grades for Excel'.html_safe, admin_export_grades_path, class:'btn btn-default' %>
+		<%= link_to '<i class="glyphicon glyphicon-print"></i> Dump Grades for archiving'.html_safe, admin_dump_grades_path, class:'btn btn-default' %>
+		<%= link_to '<i class="glyphicon glyphicon-briefcase"></i> Statistics'.html_safe, admin_stats_path, class:'btn btn-default' %>
+		<% if GradeTools.available? %>
+		<%= link_to '<i class="glyphicon glyphicon-modal-window"></i> Calculate final grades'.html_safe, course_assign_final_grade_path, method: :put, class: 'btn btn-default', data: { confirm:'Are you sure?' } %>
+		<% end %>
+	</p>
 
 </div>
 
