--- a/app/views/students/_table.html.erb
+++ b/app/views/students/_table.html.erb
@@ -62,7 +62,7 @@
 						<ul class="dropdown-menu dropdown-menu-right">
 							<% @groups.each do |group| %>
 							<li <%= 'class=disabled' if user.group_id == group.id %> ><%= link_to "Move to #{group.name}".html_safe, user_assign_group_path(user_id: user.id, group_id: group.slug), method: :post %></li>
-							<% end %>
+							<% end if @groups %>
 							<li role="separator" class="divider"></li>
 							<% if user.active? %>
 							<li><%= link_to 'Mark as inactive', user_path(id: user.id, user: { active: false }), method: :put %></li>
