--- a/app/views/layouts/_ama.html.erb
+++ b/app/views/layouts/_ama.html.erb
@@ -1,7 +1,7 @@
 <% if Settings.hands_allow %>
 <li role="presentation" class="dropdown-header" style="padding:5px 10px 0 12px;"><%= @assist_available %> staff are currently available.</li>
 <% else %>
-<li role="presentation" class="dropdown-header" style="padding:5px 10px 0 12px;">Send a question by e-mail.</li>
+<li role="presentation" class="dropdown-header" style="padding:5px 10px 0 12px;">Ask us anything.</li>
 <% end %>
 <li class="dropdown-header"  style="padding:2px 10px 0 10px;">
 	<%= form_tag(profile_ask_path, method: :post) do %>
