--- a/app/views/hands/index.html.erb
+++ b/app/views/hands/index.html.erb
@@ -4,7 +4,7 @@
 	<% @my_hands.each do |hand| %>
 	<%= link_to({controller: 'hands', action: 'show', id: hand.id}, class: 'list-group-item active') do %>
 	<span class="badge"><%= hand.location %></span>
-	<%= hand.user.name %><br><small><%= time_ago_in_words(hand.created_at) %> ago</small>
+	<%= hand.user.name %><% if hand.user.group %>  (<%= hand.user.group.name %>)<% end %><br><small><%= time_ago_in_words(hand.created_at) %> ago</small>
 	<% end %>
 	<% end %>
 	<% end %>
@@ -13,7 +13,7 @@
 	<% @hands.each do |hand| %>
 	<%= link_to({controller: 'hands', action: 'show', id: hand.id}, class: 'list-group-item') do %>
 	<span class="badge"><%= hand.location %></span>
-	<%= hand.user.name %><br><small><%= time_ago_in_words(hand.created_at) %> ago</small>
+	<%= hand.user.name %><% if hand.user.group %>  (<%= hand.user.group.name %>)<% end %><br><small><%= time_ago_in_words(hand.created_at) %> ago</small>
 	<% end %>
 	<% end %>
 
@@ -22,7 +22,7 @@
 
 	<% @long_time_users.each do |user| %>
 	<%= link_to({controller: 'hands', action: 'student', id: user.id}, class: 'list-group-item') do %>
-	<%= user.name %><br><small>
+	<%= user.name %><% if hand.user.group %>  (<%= hand.user.group.name %>)<% end %><br><small>
 		<% if user.last_spoken_at.blank? %>A new student: give them a warm welcome!<% else %><%= time_ago_in_words(user.last_spoken_at) unless user.last_spoken_at.blank? %> ago<% end %></small>
 	</a>
 	<% end %>
