--- a/app/views/hands/index.html.erb
+++ b/app/views/hands/index.html.erb
@@ -22,7 +22,7 @@
 
 	<% @long_time_users.each do |user| %>
 	<%= link_to({controller: 'hands', action: 'student', id: user.id}, class: 'list-group-item') do %>
-	<%= user.name %><% if hand.user.group %>  (<%= hand.user.group.name %>)<% end %><br><small>
+	<%= user.name %><% if user.group %>  (<%= user.group.name %>)<% end %><br><small>
 		<% if user.last_spoken_at.blank? %>A new student: give them a warm welcome!<% else %><%= time_ago_in_words(user.last_spoken_at) unless user.last_spoken_at.blank? %> ago<% end %></small>
 	</a>
 	<% end %>
