--- a/app/views/stats/hands.html.erb
+++ b/app/views/stats/hands.html.erb
@@ -12,8 +12,8 @@
 		<td><%= entry.done ? "v" : "" %>
 		<td><%= entry.assist.name if entry.assist %></td>
 		<td><%= entry.user.name %></td>
-		<td><button type="button" class="btn btn-xs" data-placement="bottom" data-toggle="tooltip" title="<%= entry.help_question %>"><%= entry.created_at.strftime("%H:%M") %></button></td>
-		<td><button type="button" class="btn btn-xs" data-placement="bottom" data-toggle="tooltip" title="<%= entry.note %>"><%= entry.updated_at.strftime("%H:%M") %></button></td>
+		<td><span data-placement="bottom" data-toggle="tooltip" title="<%= entry.help_question %>"><%= entry.created_at.strftime("%H:%M") %></button></td>
+		<td><span data-placement="bottom" data-toggle="tooltip" title="<%= entry.note %>"><%= entry.updated_at.strftime("%H:%M") %></button></td>
 		<td><%= entry.evaluation %></td>
 	</tr>
 	<% end %>
