--- a/app/views/hands/show.html.erb
+++ b/app/views/hands/show.html.erb
@@ -39,7 +39,7 @@
 			<input type="radio" name="evaluation" value="🙂" id="option2" autocomplete="off"> 🙂
 		</label>
 		<label class="btn btn-primary">
-			<input type="radio" name="evaluation" value="😏" id="option2" autocomplete="off"> 😏
+			<input type="radio" name="evaluation" value="😓" id="option2" autocomplete="off"> 😓
 		</label>
 		<label class="btn btn-primary">
 			<input type="radio" name="evaluation" value="😔" id="option3" autocomplete="off"> 😔
